add list certificates endpoint
