# certs/swagger.yml
@@ -1,4 +1,14 @@
-/certs:
+swagger: "2.0"
+info:
+  title: Mainflux Certs service
+  description: HTTP API for Certs service
+  version: "1.0.0"
+consumes:
+  - "application/json"
+produces:
+  - "application/json"
+paths:
+  /certs:
     post:
       consumes:
         - application/json
@@ -31,3 +41,67 @@
           description: Failed due to malformed JSON.
         500:
           description: Unexpected server-side error ocurred.
+  /certs/{thingID}:
+    get:
+      summary: Retrieves certificates
+      description: |
+        Retrieves a certificates for given thing ID .
+      tags:
+        - configs
+      parameters:
+        - $ref: "#/parameters/ConfigAuth"
+        - $ref: "#/parameters/ThingID"
+      responses:
+        200:
+          description: Data retrieved.
+          schema:
+            $ref: "#/definitions/BootstrapRes"
+        404:
+          description: |
+            Failed to retrieve corresponding config. Thing which attempted
+            to bootstrap is saved as an unknown Thing and can be listed and
+            added to the service later.
+        500:
+          $ref: "#/responses/ServiceError"
+parameters:
+  Authorization:
+    name: Authorization
+    description: User's access token. Used instead of credentials in env or config.toml.
+    in: header
+    type: string
+    required: false
+  ThingID:
+    name: thingID
+    description: Thing ID
+    in: path
+    type: string
+    required: true
+
+definitions:
+  CertsRes:
+    type: object
+    properties:
+      thing_id:
+        type: string
+        description: Corresponding Mainflux Thing ID.
+      mainflux_key:
+        type: string
+        description: Corresponding Mainflux Thing key.
+      mainflux_channels:
+        type: array
+        minItems: 0
+        items:
+          type: string
+      content:
+        type: string
+        description: Free-form custom configuration.
+      client_cert:
+        type: string
+        description: Client Certificate.
+      client_key:
+        type: string
+        description: Key for the client_cert.
+      ca_cert:
+        type: string
+        description: Issuing CA certificate.
+  
